[Obsolete] Vlc.DotNet (cppcli testing)/Extern References/Latest/Include/vlc/libvlc_media_player.h


/*****************************************************************************
 * Media Player
 *****************************************************************************/
/** \defgroup libvlc_media_player LibVLC media player
 * \ingroup libvlc
 * A LibVLC media player plays one media (usually in a custom drawable).
 * @{
 */

typedef struct libvlc_media_player_t libvlc_media_player_t;


/**
 * Set callbacks and private data to render decoded video to a custom area
 * in memory. Use libvlc_video_set_format() to configure the decoded format.
 *
 * Whenever a new video frame needs to be decoded, the lock callback is
 * invoked. Depending on the video chroma, one or three pixel planes of
 * adequate dimensions must be returned via the second parameter. Those
 * planes must be aligned on 32-bytes boundaries.
 *
 * When the video frame is decoded, the unlock callback is invoked. The
 * second parameter to the callback corresponds is the return value of the
 * lock callback. The third parameter conveys the pixel planes for convenience.
 *
 * When the video frame needs to be shown, as determined by the media playback
 * clock, the display callback is invoked. The second parameter also conveys
 * the return value from the lock callback.
 *
 * \param mp the media player
 * \param lock callback to allocate video memory
 * \param unlock callback to release video memory
 * \param opaque private pointer for the three callbacks (as first parameter)
 * \version LibVLC 1.1.1 or later
 */
VLC_PUBLIC_API
void libvlc_video_set_callbacks( libvlc_media_player_t *mp,
    void *(*lock) (void *opaque, void **plane),
    void (*unlock) (void *opaque, void *picture, void *const *plane),
    void (*display) (void *opaque, void *picture),
    void *opaque );