Vlc.DotNet/Core/Interop/InteropMethods.cs

using System;
using System.Runtime.InteropServices;
using Vlc.DotNet.Core.Interop.Event;

namespace Vlc.DotNet.Core.Interop
{
    [StructLayout(LayoutKind.Sequential)]
    internal struct libvlc_exception_t
    {
        public Int32 b_raised;
        public Int32 i_code;
        public IntPtr psz_message;

        public void Initalize()
        {
            InteropMethods.libvlc_exception_init(out this);
        }

        public void CheckException()
        {
            bool wasRaised = InteropMethods.libvlc_exception_raised(ref this) == 1;
            string message = (wasRaised) ? InteropMethods.libvlc_exception_get_message(ref this) : string.Empty;
            InteropMethods.libvlc_exception_clear(ref this);
            if (wasRaised) throw new Exception(message); //TODO: create VlcException class
        }

        public bool HadException()
        {
            bool wasRaised = InteropMethods.libvlc_exception_raised(ref this) == 1;
            InteropMethods.libvlc_exception_clear(ref this);
            return wasRaised;
        }
    }

    [StructLayout(LayoutKind.Sequential)]
    internal struct libvlc_log_message
    {
        public uint sizeof_msg;
        public int i_severity;
        public string psz_type;
        public string psz_name;
        public string psz_header;
        public string psz_message;
    }

    internal enum VlcState
    {
        NothingSpecial = 0,
        Opening,
        Buffering,
        Playing,
        Paused,
        Stopped,
        Forward,
        Backward,
        Ended,
        Error
    }

    internal enum libvlc_meta_t
    {
        libvlc_meta_Title,
        libvlc_meta_Artist,
        libvlc_meta_Genre,
        libvlc_meta_Copyright,
        libvlc_meta_Album,
        libvlc_meta_TrackNumber,
        libvlc_meta_Description,
        libvlc_meta_Rating,
        libvlc_meta_Date,
        libvlc_meta_Setting,
        libvlc_meta_URL,
        libvlc_meta_Language,
        libvlc_meta_NowPlaying,
        libvlc_meta_Publisher,
        libvlc_meta_EncodedBy,
        libvlc_meta_ArtworkURL,
        libvlc_meta_TrackID
    }

    internal static class InteropMethods
    {
        #region Exception Methods

        #region internal static extern void libvlc_exception_init(out libvlc_exception_t p_exception)

        /// <summary>
        /// Initialize an exception structure. This can be called several times to reuse 
        /// an exception structure.
        /// </summary>
        /// <param name="p_exception">the exception to initialize</param>
        [DllImport("libvlc")]
        internal static extern void libvlc_exception_init(out libvlc_exception_t p_exception);

        #endregion

        #region internal static extern int libvlc_exception_raised(ref libvlc_exception_t p_exception)

        /// <summary>
        /// Has an exception been raised ?
        /// </summary>
        /// <param name="p_exception">the exception to query</param>
        /// <returns>0 if no exception raised, 1 else</returns>
        [DllImport("libvlc")]
        internal static extern int libvlc_exception_raised(ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern void libvlc_exception_clear(ref libvlc_exception_t p_exception)

        /// <summary>
        /// Clear an exception object so it can be reused.  The exception object must be initialized
        /// </summary>
        /// <param name="p_exception">the exception to clear</param>
        [DllImport("libvlc")]
        internal static extern void libvlc_exception_clear(ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern String libvlc_exception_get_message(ref libvlc_exception_t p_exception)

        /// <summary>
        /// Get exception message
        /// </summary>
        /// <param name="p_exception">the exception to query</param>
        /// <returns>the exception message or NULL if not applicable (exception not raised for example)</returns>
        [DllImport("libvlc")]
        internal static extern String libvlc_exception_get_message(ref libvlc_exception_t p_exception);

        #endregion

        #endregion

        #region Core Methods

        #region internal static extern IntPtr libvlc_new(int argc, [MarshalAs(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPStr)]string[] argv, ref libvlc_exception_t exception)

        /// <summary>
        /// Create an initialized libvlc instance
        /// </summary>
        /// <param name="argc">the number of arguments</param>
        /// <param name="argv">command-line-type arguments as string array</param>
        /// <param name="exception">an initialized exception pointer</param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern IntPtr libvlc_new(int argc, [MarshalAs(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPStr)] string[] argv, ref libvlc_exception_t exception);

        #endregion

        #region internal static extern int libvlc_get_vlc_id(IntPtr p_instance)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_instance"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern int libvlc_get_vlc_id(IntPtr p_instance);

        #endregion

        #region internal static extern void libvlc_release (IntPtr p_instance)

        /// <summary>
        /// Decrement the reference count of a libvlc instance, and destroy it if it reaches zero.
        /// </summary>
        /// <param name="p_instance"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_release(IntPtr p_instance);

        #endregion

        #region internal static extern void libvlc_retain (IntPtr p_instance)

        /// <summary>
        /// Increments the reference count of a libvlc instance.
        /// </summary>
        /// <param name="p_instance"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_retain(IntPtr p_instance);

        #endregion

        #region internal static extern void libvlc_add_intf(IntPtr p_instance, [MarshalAs(UnmanagedType.LPStr)] string name, ref libvlc_exception_t p_exception)

        /// <summary>
        /// Try to start a user interface for the libvlc instance, and wait until the user exits.
        /// </summary>
        /// <param name="p_instance"></param>
        /// <param name="name"></param>
        /// <param name="p_exception"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_add_intf(IntPtr p_instance, [MarshalAs(UnmanagedType.LPStr)] string name, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern void libvlc_wait (IntPtr p_instance)

        /// <summary>
        /// Waits until an interface causes the instance to exit.
        /// </summary>
        /// <param name="p_instance"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_wait(IntPtr p_instance);

        #endregion

        #region internal static extern String libvlc_get_version ()

        /// <summary>
        /// Retrieve libvlc version.
        /// </summary>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern String libvlc_get_version();

        #endregion

        #region internal static extern String libvlc_get_compiler ()

        /// <summary>
        /// Retrieve libvlc compiler version.
        /// </summary>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern String libvlc_get_compiler();

        #endregion

        #region internal static extern String libvlc_get_changeset ()

        /// <summary>
        /// Retrieve libvlc changeset. 
        /// </summary>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern String libvlc_get_changeset();

        #endregion

        #endregion

        #region Media Methods

        #region internal static extern IntPtr libvlc_media_new(IntPtr p_instance, [MarshalAs(UnmanagedType.LPStr)] string psz_mrl, ref libvlc_exception_t p_exception)

        /// <summary>
        /// Create a media with the given MRL.
        /// </summary>
        /// <param name="p_instance"></param>
        /// <param name="psz_mrl"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern IntPtr libvlc_media_new(IntPtr p_instance, [MarshalAs(UnmanagedType.LPStr)] string psz_mrl, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern IntPtr libvlc_media_new_as_node(IntPtr p_instance, [MarshalAs(UnmanagedType.LPStr)] string psz_name, ref libvlc_exception_t p_exception)

        /// <summary>
        /// Create a media as an empty node with the passed name.
        /// </summary>
        /// <param name="p_instance"></param>
        /// <param name="psz_name"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern IntPtr libvlc_media_new_as_node(IntPtr p_instance, [MarshalAs(UnmanagedType.LPStr)] string psz_name, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern void libvlc_media_add_option(IntPtr p_media, [MarshalAs(UnmanagedType.LPStr)] string ppsz_options, ref libvlc_exception_t p_exception)

        /// <summary>
        /// Add an option to the media.
        /// </summary>
        /// <param name="p_media"></param>
        /// <param name="ppsz_options"></param>
        /// <param name="p_exception"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_media_add_option(IntPtr p_media, [MarshalAs(UnmanagedType.LPStr)] string ppsz_options, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern void libvlc_media_retain(IntPtr p_media)

        /// <summary>
        /// Retain a reference to a media descriptor object (libvlc_media_t).
        /// </summary>
        /// <param name="p_media"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_media_retain(IntPtr p_media);

        #endregion

        #region internal static extern void libvlc_media_release(IntPtr p_media)

        /// <summary>
        /// Decrement the reference count of a media descriptor object.
        /// </summary>
        /// <param name="p_media"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_media_release(IntPtr p_media);

        #endregion

        #region internal static extern String libvlc_media_get_mrl(IntPtr p_media, ref libvlc_exception_t p_exception)

        /// <summary>
        /// Get the media resource locator (mrl) from a media descriptor object.
        /// </summary>
        /// <param name="p_media"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern String libvlc_media_get_mrl(IntPtr p_media, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern IntPtr libvlc_media_duplicate(IntPtr p_media)

        /// <summary>
        /// Duplicate a media descriptor object.
        /// </summary>
        /// <param name="p_media"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern IntPtr libvlc_media_duplicate(IntPtr p_media);

        #endregion
